@@ -41,7 +41,8 @@ module TestEnvironment
 	spec.name = 'c'
 	spec.version = '1.2'
 	Gem::Builder.new(spec).build
-	FileUtils.mkdir("gemhome") unless File.exist? "gemhome"
+  FileUtils.rm_r "gemhome"
+	FileUtils.mkdir("gemhome")
 	Gem::Installer.new("a-0.0.1.gem").install(false, "gemhome", false)
 	Gem::Installer.new("a-0.0.2.gem").install(false, "gemhome", false)
 	Gem::Installer.new("b-0.0.2.gem").install(false, "gemhome", false)
