@@ -1,3 +1,12 @@
+2006-12-16  Chad Fowler <chad@chadfowler.com>
+
+   * test/: Added functional test for extension gems proving that non-compiling extensions don't result
+   in success message.
+   
+   * lib/rubygems/specification.rb: Raise exception if loaded spec is nil.  Closes bug #7299.
+   
+   * test/gemenvironment.rb: Clean out gemhome every time to avoid dirty directory failing tests.
+   
 2006-12-15  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/installer.rb (Gem::Uninstaller): Correctly uninstall
